# StrandKit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COST_ANALYTICS_PHASE1.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_EXAMPLES_VALIDATION.md  STRANDS_INTEGRATION_ANALYSIS.md  STRANDS_TEST_REPORT.md  TESTING_SUMMARY.md  TEST_REPORT.md  TOOLS.md  add_tool_decorators.py  demo_real_insights.py  example_granular_agent.py  example_orchestrator_agent.py  pyproject.toml  requirements.txt  test_active_function.py  test_bedrock_tools.py  test_live_aws.py  test_orchestrators.py  test_rds_vpc_tools.py  test_readme_examples.py  test_strands_integration.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_usage.py  comprehensive_test.py  strands_integration.py  test_cost_analytics.py  test_cost_waste.py  test_ebs.py  test_ec2_advanced.py  test_ec2_tools.py  test_iam_security.py  test_imports.py  test_new_tools.py  test_s3_advanced.py  test_s3_tools.py  test_strands_agent.py  test_strands_simple.py
strandkit/: __init__.py
strandkit/agents/: __init__.py  infra_debugger.py
strandkit/cli/: __init__.py  __main__.py
strandkit/core/: __init__.py  aws_client.py  base_agent.py  schema.py
strandkit/prompts/: infra_debugger_system.md
strandkit/strands/: __init__.py  provider.py  registry.py  schemas.py
strandkit/strands/agents/: __init__.py  infra_debugger.py
strandkit/tools/: __init__.py  bedrock.py  cloudformation.py  cloudwatch.py  cloudwatch_enhanced.py  cost.py  cost_analytics.py  cost_waste.py  ebs.py  ec2.py  ec2_advanced.py  iam.py  iam_security.py  orchestrators.py  rds.py  s3.py  s3_advanced.py  vpc.py
tests/: __init__.py
