[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strandkit"
version = "2.3.0"
description = "Companion SDK for AWS Strands Agents - 78 production-ready AWS tools for cost optimization, security auditing, and infrastructure monitoring"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "StrandKit Contributors", email = "noreply@github.com"}
]
keywords = ["aws", "strands", "agents", "llm", "cloudwatch", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

[project.optional-dependencies]
strands = [
    "strands-agents>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/lhassa8/StrandKit"
Documentation = "https://github.com/lhassa8/StrandKit/blob/main/README.md"
Repository = "https://github.com/lhassa8/StrandKit"
"Bug Tracker" = "https://github.com/lhassa8/StrandKit/issues"

[project.scripts]
strandkit = "strandkit.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["strandkit*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
